test/classes/delete-free/owned/owned-record-instantiation-types-user-init-borrows-error.good
owned-record-instantiation-types-user-init-borrows-error.chpl:17: error: type mismatch in assignment from GenericCollection(MyClass) to GenericCollection(_owned(MyClass))
